<resources>
    <string name="app_name">"银联支付"</string>
    <string name="operator_code">操作员"</string>
    <string name="password">密码"</string>
    <string name="please_input_operator_code">请输入操作员代码"</string>
    <string name="please_input_password">请输入密码"</string>
    <string name="ok">确定"</string>
    <string name="cancel">取消"</string>
    <string name="union_pay">中国银联"</string>
    <string name="please_insert_card">请刷卡或插卡"</string>
    <string name="please_input_amount">请输入金额："</string>
    <string name="please_use_card">请使用您的银行卡"</string>
    <string name="please_input_card_password">请持卡人输入密码："</string>
    <string name="please_wait">请稍等"</string>
    <string name="timeout_quit">超时退出"</string>
    <string name="press_ok_withoutpassword">无密码按确认键"</string>
    <string name="error_press_clear">输错请按清除键"</string>
    <string name="input_amount_allowed">输入金额只允许两位小数"</string>
    <string name="text_consume">消费"</string>
    <string name="text_revoke">撤销"</string>
    <string name="text_return_goods">退货"</string>
    <string name="text_offline">离线"</string>
    <string name="text_print">打印"</string>
    <string name="text_preauth">预授权"</string>
    <string name="text_other">其他"</string>
    <string name="text_manage">管理"</string>
    <string name="trans_type_consume">消费"</string>
    <string name="dlg_msg_PowerLevel">PowerLevel is lower, will exit application.</string>
    <string name="dlg_title_action">Attention</string>
    <string name="comm_dialing">正在连接……"</string>
    <string name="press_cancel_exit">按取消键退出"</string>
    <string name="connected_unionpay_center">已连接中心"</string>
    <string name="comm_processing">处理中……"</string>
    <string name="comm_reversing">第%1$d/%2$d冲正中……"</string>
    <string name="comm_wait">通讯中……"</string>
    <string name="settle_wait">结算中……"</string>
    <string name="wait">中……"</string>
    <string name="upload_settle_wait">正在批上送……"</string>
    <string name="upload_settle_s_wait">正在上送磁条卡交易……"</string>
    <string name="upload_settle_tc_wait">正在上送TC值……"</string>
    <string name="send_packet">发送数据包"</string>
    <string name="receive_return">接收返回"</string>
    <string name="comm_failure">通讯失败"</string>
    <string name="please_connect_line">请接电话线"</string>
    <string name="def_invoice_title">银联 POS"</string>
    <string name="dlg_login_title">登录"</string>
    <string name="dlg_login_msg_user_pwd_not_null">操作员密码不能为空"</string>
    <string name="sys_manage">系统管理"</string>
    <string name="term_param_set">终端参数设置"</string>
    <string name="comm_param_set">通讯参数设置"</string>
    <string name="tran_param_set">交易功能设置"</string>
    <string name="term_secretkey_manage">终端密钥管理"</string>
    <string name="change_password">修改密码"</string>
    <string name="others">其他功能"</string>
    <string name="invalid_input_please_try_again">输入无效，请重试。"</string>
    <string name="please_input_merchant_id">请输入商户编号："</string>
    <string name="please_input_term_id">请输入终端编号："</string>
    <string name="please_input_merchant_name">请输入商户名称："</string>
    <string name="please_input_current_year">请输入当前年份："</string>
    <string name="please_input_serial_number">当前流水号："</string>
    <string name="please_input_batch_number">当前批次号："</string>
    <string name="max_reject_set">最大退货金额设置"</string>
    <string name="please_input_max_reject_amt">请输入最大退货金额："</string>
    <string name="settlement_print_set">结算打印明细设置"</string>
    <string name="whether_prompt_print_details">是否提示打印明细"</string>
    <string name="english_set">英文设置"</string>
    <string name="whether_print_english_invoice">签购单是否打英文"</string>
    <string name="invoice_set">签购单设置"</string>
    <string name="invoice_select">签购单选择"</string>
    <string name="invoice_title_set">签购单抬头设置"</string>
    <string name="invoice_title_select">抬头内容选择"</string>
    <string name="please_input_invoice_title">请输入签购单抬头："</string>
    <string name="default_transaction_set">默认交易设置"</string>
    <string name="sale_revoke_need_card">消费撤销是否用卡"</string>
    <string name="preauth_complete_revoke_need_card">预授权完成撤销是否用卡"</string>
    <string name="sale_revoke_need_pw">消费撤销是否输密码"</string>
    <string name="preauth_revoke_need_pw">预授权撤销是否输密码"</string>
    <string name="preauth_complete_revoke_need_pw">预授权完成撤销是否输密码"</string>
    <string name="preauth_complete_need_pw">预授权完成是否输密码"</string>
    <string name="yes">是"</string>
    <string name="format_new">新"</string>
    <string name="no">否"</string>
    <string name="old">旧"</string>
    <string name="invoice_title_default">默认"</string>
    <string name="input">输入"</string>
    <string name="sale">消费"</string>
    <string name="preauth">预授权"</string>
    <string name="dial">拨号"</string>
    <string name="serial_ports">串口"</string>
    <string name="GPRS">GPRS</string>
    <string name="CDMA">CDMA</string>
    <string name="ethernet">以太网"</string>
    <string name="dial_external">外线号码："</string>
    <string name="dial_host1">中心交易电话 1："</string>
    <string name="dial_host2">中心交易电话 2："</string>
    <string name="dial_host3">中心交易电话 3："</string>
    <string name="dial_center">管理中心号码:"</string>
    <string name="gprs_set">GPRS 设置"</string>
    <string name="gprs_apn">接入号码 (D)："</string>
    <string name="apn_name">APN1 名称："</string>
    <string name="host1_ip">主机 1 IP 地址："</string>
    <string name="host2_ip">主机 2 IP 地址："</string>
    <string name="host1_port">主机 1 端口："</string>
    <string name="host2_port">主机 2 端口："</string>
    <string name="gprs_need_user_name">需要用户名"</string>
    <string name="gprs_input_user_name">输入用户名"</string>
    <string name="gprs_input_pw">输入密码"</string>
    <string name="cdma_set">CDMA 设置"</string>
    <string name="ethernet_set">以太网设置"</string>
    <string name="ethernet_hostip">本机 IP 地址："</string>
    <string name="ethernet_subnetmask">子网掩码："</string>
    <string name="ethernet_gateway">网关："</string>
    <string name="general_param_set">通用参数设置"</string>
    <string name="TPDU">TPDU"</string>
    <string name="whether_predial">是否预拨号："</string>
    <string name="tran_timeout">交易超时时间："</string>
    <string name="tran_redial_time">交易重拨次数："</string>
    <string name="shield_commtran">传统交易开关"</string>
    <string name="shield_ectran">电子现金交易开关"</string>
    <string name="shield_stagetran">分期积分交易开关"</string>
    <string name="shield_upcardtran">手机芯片交易开关"</string>
    <string name="shield_ordertran">订购交易开关"</string>
    <string name="shield_othertran">预约其他交易开关"</string>
    <string name="logout_set">签退设置"</string>
    <string name="tip_ratio">小费比例"</string>
    <string name="request_retry_times">消息重发次数"</string>
    <string name="number_prints">打印张数"</string>
    <string name="max_number_tran">最大交易笔数"</string>
    <string name="shield_consumer_revoked">消费撤销"</string>
    <string name="shield_inquiry">余额查询"</string>
    <string name="shield_preauth">预授权"</string>
    <string name="shield_offline">离线结算"</string>
    <string name="shield_return">退货"</string>
    <string name="shield_preauth_revoke">预授权撤销"</string>
    <string name="shield_preauth_complete">预授权完成"</string>
    <string name="shield_preauth_complete_revoke">预授权完成撤销"</string>
    <string name="shield_quancun">圈存"</string>
    <string name="shield_preauth_complete_notice">预授权完成通知"</string>
    <string name="shield_consumer_electronic_cash">接触式电子现金消费"</string>
    <string name="shield_consumer_conelectronic_cash">非接触式电子现金消费"</string>
    <string name="shield_transfer_from">电子现金指定账户圈存"</string>
    <string name="shield_transfer_nofrom">电子现金非指定账户圈存"</string>
    <string name="shield_transfer_cash">电子现金现金充值"</string>
    <string name="shield_transfer_cash_void">电子现金现金充值撤销"</string>
    <string name="shield_ec_refund">电子现金脱机退货"</string>
    <string name="shield_stage_sale">分期付款"</string>
    <string name="shield_stage_sale_void">分期付款消费撤销"</string>
    <string name="shield_uni_integral_sale">联盟积分消费"</string>
    <string name="shield_iss_integral_sale">发卡行积分消费"</string>
    <string name="shield_uni_integral_sale_void">联盟积分消费撤销"</string>
    <string name="shield_iss_integral_sale_void">发卡行积分消费撤销"</string>
    <string name="shield_uni_integral_query">联盟积分查询"</string>
    <string name="shield_iss_integral_refund">联盟积分退货"</string>
    <string name="shield_upcard_sale">手机消费"</string>
    <string name="shield_upcard_sale_void">手机消费撤销"</string>
    <string name="shield_upcard_refund">手机退货"</string>
    <string name="shield_upcard_preauth">手机预授权"</string>
    <string name="shield_upcard_preauth_void">手机预授权撤销"</string>
    <string name="shield_upcard_preauth_complreq">手机预授权完成请求"</string>
    <string name="shield_upcard_preauth_complnof">手机预授权完成通知"</string>
    <string name="shield_upcard_preauth_coml_void">手机预授权完成撤销"</string>
    <string name="shield_upcard_query">手机余额查询"</string>
    <string name="shield_order_sale">订购消费"</string>
    <string name="shield_order_sale_void">订购消费撤销"</string>
    <string name="shield_order_refund">订购退货"</string>
    <string name="shield_order_preauth">订购预授权"</string>
    <string name="shield_order_preauth_void">订购预授权撤销"</string>
    <string name="shield_order_preauth_complreq">订购预授权完成请求"</string>
    <string name="shield_order_preauth_complnof">订购预授权完成通知"</string>
    <string name="shield_order_preauth_coml_void">订购预授权完成撤销"</string>
    <string name="shield_book_sale">预约消费"</string>
    <string name="shield_book_sale_void">预约消费撤销"</string>
    <string name="shield_prepaycard_cash">磁条卡现金充值"</string>
    <string name="shield_prepaycard_account">磁条卡账户充值"</string>
    <string name="shield_support">支持"</string>
    <string name="shield_not_support">不支持"</string>
    <string name="logout_set_auto_logout">结算后自动签退"</string>
    <string name="tip_ratio_set">小费设置"</string>
    <string name="tip_percentage">小费百分比（%）"</string>
    <string name="retry_times">重拨次数："</string>
    <string name="retry_reqsendtimes">消费重发次数："</string>
    <string name="number_prints_set">打印张数设置"</string>
    <string name="number_prints_prompt">打印张数："</string>
    <string name="max_number_tran_set">最大交易笔数设置"</string>
    <string name="max_number_tran_prompt">最大交易笔数："</string>
    <string name="secret_key_index_set">密钥索引设置"</string>
    <string name="offlineSettle">离线结算</string>
    <string name="settleAdjust">结算调整</string>
    <string name="quxiao">取消</string>
    <string name="queren">确认</string>
    <string name="yushouquan">预授权</string>
    <string name="xiaofei">消费</string>
    <string name="xiaofeicexiao">消费撤销</string>
    <string name="yushouquanwanchengtongzhi">预授权完成（通知）</string>
    <string name="yushouquanwanchengcexiao">预授权完成撤销</string>
    <string name="qingkong">清空</string>
    <string name="action_authorization_undo">预授权撤销</string>
    <string name="action_balance">余额查询</string>
    <string name="action_chip_return">手机芯片退货</string>
    <string name="shoujixinpianyushouquan">手机芯片预授权</string>
    <string name="shoujixinpianyushouquanchexiao">手机芯片预授权撤销</string>
    <string name="shoujixinpian_qingqiu">手机芯片预授权完成（请求）</string>
    <string name="shoujixinpian_tongzhi">手机芯片预授权完成（通知）</string>
    <string name="shoujixinpian_wanchengchexiao">手机芯片预授权完成撤销</string>
    <string name="shoujixinpian_yuechaxun">手机芯片余额查询</string>
    <string name="tip">小费</string>
    <string name="xiaoedaishouquan">小额代授权</string>
    <string name="yushouquanwanchengqingqiu">预授权完成（请求）</string>
    <string name="apn_setting">APN设置：</string>
    <string name="user_name_setting">用户名：</string>
    <string name="user_pwd_setting">用户密码：</string>
    <string name="if_use_custom_apn">是否启用自定义APN</string>
    <string name="set_host_ip">主机IP设置</string>
    <string name="set_host_post">主机端口设置</string>
    <string name="set_backup_ip">备份IP设置</string>
    <string name="set_backup_post">备份端口设置</string>
    <string name="outside_call">外线号码：</string>
    <string name="main_phone_num_1">主机电话1：</string>
    <string name="main_phone_num_2">主机电话2：</string>
    <string name="main_phone_num_3">主机电话3：</string>
    <string name="at_order">AT指令：</string>
    <string name="dial_style">拨号方式：</string>
    <string name="pathch">patch：</string>
</resources>