<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <include layout="@layout/layout_title" />

        <com.basewin.widgets.HandWriteView
            android:id="@+id/handwriteview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deletebutton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/normal_cancel_state"
            android:text="@string/qingkong"
            android:textColor="@color/swipecard_btn_bg"
            android:layout_weight="2" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@drawable/normal_cancel_state"
            android:text="@string/quxiao"
            android:textColor="@color/swipecard_btn_bg"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/normal_ok_state"
            android:text="@string/queren"
            android:textColor="#ffffff"
            android:layout_weight="2" />
    </LinearLayout>


</LinearLayout>